; ModuleID = '/home/carl/AnghaBench/openssl/ssl/statem/extr_extensions_clnt.c_tls_parse_stoc_supported_versions.c'
source_filename = "/home/carl/AnghaBench/openssl/ssl/statem/extr_extensions_clnt.c_tls_parse_stoc_supported_versions.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@SSL_AD_DECODE_ERROR = common dso_local global i32 0, align 4
@SSL_F_TLS_PARSE_STOC_SUPPORTED_VERSIONS = common dso_local global i32 0, align 4
@SSL_R_LENGTH_MISMATCH = common dso_local global i32 0, align 4
@TLS1_3_VERSION = common dso_local global i32 0, align 4
@SSL_AD_ILLEGAL_PARAMETER = common dso_local global i32 0, align 4
@SSL_R_BAD_PROTOCOL_VERSION_NUMBER = common dso_local global i32 0, align 4
@SSL_EXT_TLS1_3_HELLO_RETRY_REQUEST = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tls_parse_stoc_supported_versions(%struct.TYPE_4__* %0, i32* %1, i32 %2, i32* %3, i64 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_4__*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32* %3, i32** %10, align 8
  store i64 %4, i64* %11, align 8
  %13 = load i32*, i32** %8, align 8
  %14 = call i32 @PACKET_get_net_2(i32* %13, i32* %12)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %20

16:                                               ; preds = %5
  %17 = load i32*, i32** %8, align 8
  %18 = call i64 @PACKET_remaining(i32* %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %26

20:                                               ; preds = %16, %5
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %22 = load i32, i32* @SSL_AD_DECODE_ERROR, align 4
  %23 = load i32, i32* @SSL_F_TLS_PARSE_STOC_SUPPORTED_VERSIONS, align 4
  %24 = load i32, i32* @SSL_R_LENGTH_MISMATCH, align 4
  %25 = call i32 @SSLfatal(%struct.TYPE_4__* %21, i32 %22, i32 %23, i32 %24)
  store i32 0, i32* %6, align 4
  br label %45

26:                                               ; preds = %16
  %27 = load i32, i32* %12, align 4
  %28 = load i32, i32* @TLS1_3_VERSION, align 4
  %29 = icmp ne i32 %27, %28
  br i1 %29, label %30, label %36

30:                                               ; preds = %26
  %31 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %32 = load i32, i32* @SSL_AD_ILLEGAL_PARAMETER, align 4
  %33 = load i32, i32* @SSL_F_TLS_PARSE_STOC_SUPPORTED_VERSIONS, align 4
  %34 = load i32, i32* @SSL_R_BAD_PROTOCOL_VERSION_NUMBER, align 4
  %35 = call i32 @SSLfatal(%struct.TYPE_4__* %31, i32 %32, i32 %33, i32 %34)
  store i32 0, i32* %6, align 4
  br label %45

36:                                               ; preds = %26
  %37 = load i32, i32* %9, align 4
  %38 = load i32, i32* @SSL_EXT_TLS1_3_HELLO_RETRY_REQUEST, align 4
  %39 = icmp eq i32 %37, %38
  br i1 %39, label %40, label %41

40:                                               ; preds = %36
  store i32 1, i32* %6, align 4
  br label %45

41:                                               ; preds = %36
  %42 = load i32, i32* %12, align 4
  %43 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %44 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %43, i32 0, i32 0
  store i32 %42, i32* %44, align 4
  store i32 1, i32* %6, align 4
  br label %45

45:                                               ; preds = %41, %40, %30, %20
  %46 = load i32, i32* %6, align 4
  ret i32 %46
}

declare dso_local i32 @PACKET_get_net_2(i32*, i32*) #1

declare dso_local i64 @PACKET_remaining(i32*) #1

declare dso_local i32 @SSLfatal(%struct.TYPE_4__*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
